# libxeve

./: .gitmodules  BUILD.gn  README.md  build.gni  options.gni  xeve_base_sources.gni  xeve_main_sources.gni
source/config/config/: xeve_version.h
source/config/linux/x64/config/: xeve_exports.h
